k8s/demo.yaml
##################################################################################################
# service-a
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: service-a
  labels:
    app: service-a
    service: service-a
spec:
  ports:
  - port: 10001
    name: http
  selector:
    app: service-a
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a-v1
  labels:
    app: service-a
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
      version: v1
  template:
    metadata:
      labels:
        app: service-a
        version: v1
    spec:
      serviceAccountName: demo-service-a
      containers:
      - name: service-a
        image: kkk2099/kkk:service-a-1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 10001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-a-v2
  labels:
    app: service-a
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-a
      version: v2
  template:
    metadata:
      labels:
        app: service-a
        version: v2
    spec:
      serviceAccountName: demo-service-a
      containers:
      - name: service-a
        image: kkk2099/kkk:service-a-1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 10001
---
##################################################################################################
# service-b
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: service-b
  labels:
    app: service-b
    service: service-b
spec:
  ports:
  - port: 10002
    name: http
  selector:
    app: service-b
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b-v1
  labels:
    app: service-b
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
      version: v1
  template:
    metadata:
      labels:
        app: service-b
        version: v1
    spec:
      serviceAccountName: demo-service-b
      containers:
      - name: service-b
        image: kkk2099/kkk:service-b-1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 10002
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: service-b-v2
  labels:
    app: service-b
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: service-b
      version: v2
  template:
    metadata:
      labels:
        app: service-b
        version: v2
    spec:
      serviceAccountName: demo-service-b
      containers:
      - name: service-b
        image: kkk2099/kkk:service-b-1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 10002
---
##################################################################################################
# api-gateway
##################################################################################################
apiVersion: v1
kind: Service
metadata:
  name: gateway
  labels:
    app: gateway
    service: gateway
spec:
  ports:
  - port: 10000
    name: http
  selector:
    app: gateway
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gateway
  labels:
    app: gateway
spec:
  replicas: 1
  selector:
    matchLabels:
      app: gateway
  template:
    metadata:
      labels:
        app: gateway
    spec:
      serviceAccountName: demo-gateway
      containers:
      - name: gateway
        image: kkk2099/kkk:gateway-1.0
        imagePullPolicy: Always
        ports:
        - containerPort: 10000
---
