k8s/header-svs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: propagate-headers
spec:
  hosts:
  - service-b
  http:
  - route:
    - destination:
        host: service-b
    headers:
      request:
        add:
          x-api-version: '"%METADATA([envoy.lb]x_api_version)%"'  # 在 metadata 引用外加上引号
