k8s/virtual-service-a.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: service-a
spec:
  hosts:
  - service-a
  http:
  - match:
    - headers:
        baggage:
          exact: "x-api-version=v1"
    route:
    - destination:
        host: service-a
        subset: v1
  - route:
    - destination:
        host: service-a
        subset: v2
